# test-outlook-webhook

./: .gitignore  README.md  pyproject.toml  test.py  test2.py  test_imaptools.py
app/: main.py  msgraph.py
app/routers/: __init__.py  example.py  outlook_webhook.py  subscription.py
